created layout of our projects main page changes in main.handlebars and style.css

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,25 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand">MyCookBook</a>
   <form class="form-inline">
-    <button type="button" class="btn btn-dark" style="margin:5px;">Home</button>
+    <button type="button" class="btn btn-dark btn-secondary" style="margin:5px;">Home</button>
 
     <button type="button" class="btn btn-dark" style="margin:5px;">Join</button>
     <button type="button" class="btn btn-dark" style="margin:5px;">SignIn</button>
 
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
   </form>
 </nav>
 <div class="bg">
-  <img class="main-img"
-    src="https://images.unsplash.com/photo-1576866209830-589e1bfbaa4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60"></img>
+  <div class="main-title">
+    <h3>My CookBook! A Place to save your favourite recipes!</h3>
+  </div>
+  <form class="form-inline main-search active-cyan-4">
+    <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Find the recipe here!!"
+      aria-label="Search">
+    <button type="button" class="btn btn-dark" style="margin:5px;">Search</button>
+  </form>
+</div>
 </div>
 
 
