--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand">MyCookBook</a>
   <form class="form-inline">
-    <button type="button" class="btn btn-dark btn-secondary" style="margin:5px;">Home</button>
+    <button type="button" class="btn btn-dark btn-secondary" style="margin:5px;"><a href="/">Home</a></button>
 
-    <button type="button" class="btn btn-dark" style="margin:5px;">Join</button>
+    <button type="button" class="btn btn-dark btn-join" style="margin:5px;"><a href="/views/join">Join</a></button>
+
+
     <button type="button" class="btn btn-dark" style="margin:5px;">SignIn</button>
 
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -12,7 +14,7 @@
 </nav>
 <div class="bg">
   <div class="main-title">
-    <h3>My CookBook! A Place to save your favourite recipes!</h3>
+    <h3>My CookBook! A Place to save my favourite recipes!</h3>
   </div>
   <form class="form-inline main-search active-cyan-4">
     <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Find the recipe here!!"
