--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MyCookBook!</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <title>Home Page</title>
+  <link rel="stylesheet" href="/styles/styles.css" title="no title>
 </head>
 
-<body class: "main-body">
+<body class: " main-body">
   {{{body}}}
-</body>
+  </body>
 
 </html>
