--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -23,6 +23,11 @@
   padding-left: 300px;
   padding-top: 45px;
 }
-.join-form {
+.main-form-div {
+  background-size: cover;
+  background-image: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&auto=format&fit=crop&w=631&q=80");
+}
+.joing-form {
   margin: 40px;
+  padding-left: 470px;
 }
