--- a/views/join.handlebars
+++ b/views/join.handlebars
@@ -12,23 +12,26 @@
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
     </form>
 </nav>
-<div class="join-form">
-    <form>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="email" class="form-control" id="name" placeholder="Enter your name">
+<div class="main-form-div">
+    <div class="joing-form">
+        <form>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="email" class="form-control" id="name" placeholder="Enter your name">
 
-        </div>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-primary">Join</button>
-    </form>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                    else.</small>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Join</button>
+        </form>
+    </div>
 </div>
