created signin form in signin.handlebars and make some changes in style.css

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,11 +2,8 @@
   <a class="navbar-brand">MyCookBook</a>
   <form class="form-inline">
     <button type="button" class="btn btn-dark btn-secondary" style="margin:5px;"><a href="/">Home</a></button>
-
-    <button type="button" class="btn btn-dark btn-join" style="margin:5px;"><a href="/views/join">Join</a></button>
-
-
-    <button type="button" class="btn btn-dark" style="margin:5px;">SignIn</button>
+    <button type="button" class="btn btn-dark btn-join" style="margin:5px;"><a href="/join">Join</a></button>
+    <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/signin">SignIn</a></button>
 
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
