--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -12,14 +12,9 @@
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
     </form>
 </nav>
-<div class="main-form-div">
-    <div class="joing-form">
+<div class="main-signin-div">
+    <div class="sign-form">
         <form>
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="email" class="form-control" id="name" placeholder="Enter your name">
-
-            </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
@@ -31,7 +26,7 @@
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
-            <button type="submit" class="btn btn-primary">Join</button>
+            <button type="submit" class="btn btn-primary">Enter</button>
         </form>
     </div>
 </div>
