--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -31,3 +31,13 @@
   margin: 40px;
   padding-left: 470px;
 }
+.main-signin-div {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url("https://images.unsplash.com/photo-1515003197210-e0cd71810b5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+}
+.sign-form {
+  margin: 40px;
+  padding-right: 650px;
+}
