--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -36,8 +36,10 @@
   background-size: cover;
   background-position: center;
   background-image: url("https://images.unsplash.com/photo-1515003197210-e0cd71810b5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+  padding-bottom: 100px;
 }
 .sign-form {
   margin: 40px;
+  padding-top: 80px;
   padding-right: 650px;
 }
