design the find recipe by name changes in recipelist.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,22 +6,22 @@
     <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/signin">SignIn</a></button>
 
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-dark btn-find-recipe my-2 my-sm-0" type="submit">Search</button>
+    <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
   </form>
 </nav>
 <div class="bg">
   <div class="main-title">
     <h3>My CookBook! A Place to save my favourite recipes!</h3>
   </div>
-  <form class="form-inline main-search active-cyan-4">
+  <form class="form-inline main-search active-cyan-4" method="get">
     <input class="form-control form-control-sm mr-3 w-75 recipe-search" type="text" placeholder="Find the recipe here!!"
       aria-label="Search">
-    <button type="button" class="btn btn-dark btn-find-recipe" style="margin:5px;">Search</button>
+    <button type="button" class="btn btn-dark btn-find-recipe" style="margin:5px;">
+
+      <a href="/recipelist/Pancakes"> Search</a> </button>
   </form>
 </div>
 </div>
 
-
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type=" text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
