--- a/views/recipelist.handlebars
+++ b/views/recipelist.handlebars
@@ -1,3 +1,53 @@
-<h1>show recipes</h1>
-<p>{{dataValues.name}}</p>
-<p>{{dataValues.method}}</p>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand">MyCookBook</a>
+    <form class="form-inline">
+        <button type="button" class="btn btn-dark btn-secondary" style="margin:5px;"><a href="/">Home</a></button>
+        <button type="button" class="btn btn-dark btn-join" style="margin:5px;"><a href="/join">Join</a></button>
+        <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/signin">SignIn</a></button>
+
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+    </form>
+</nav>
+<h2> {{dataValues.name}} Recipe </h2>
+{{!-- <div class="card" style="width: 18rem;">
+    <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+        class="card-img-top" alt="...">
+    <div class="card-body">
+        <h4>Ingredients</h4>
+        <p class="card-text">{{dataValues.method}}</p>
+    </div> --}}
+<div class="row">
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <img src="{{dataValues.image}}" class="card-img-top" alt="...">
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-3">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Ingredients</h5>
+                <p class="card-text">{{dataValues.method}}</p>
+
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-5">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Method</h5>
+                <p class="card-text">{{dataValues.method}}</p>
+            </div>
+        </div>
+    </div>
+</div>
+< {{#each dataValues.Ingredients}}<p>
+    {{this.dataValues.name}}
+    </p>
+    {{/each}}
+    {{#each dataValues.DietryRequirements}}<p>
+        {{this.dataValues.name}}
+    </p>
+    {{/each}}
