connected search to show recipes

--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -7,9 +7,7 @@
 
 
         <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/signin">SignIn</a></button>
-
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+        <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/myownrecipe">Create recipe</a></button>
     </form>
 </nav>
 <div class="main-signin-div">
@@ -26,7 +24,7 @@
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
-            <button type="submit" class="btn btn-primary">Enter</button>
+            <button type="button" id="userEnter" class="btn btn-primary">Enter</button>
         </form>
     </div>
 </div>
