--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,7 @@
     <button type="button" class="btn btn-dark btn-secondary" style="margin:5px;"><a href="/">Home</a></button>
     <button type="button" class="btn btn-dark btn-join" style="margin:5px;"><a href="/join">Join</a></button>
     <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/signin">SignIn</a></button>
-
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+    <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/myownrecipe">Create recipe</a></button>
   </form>
 </nav>
 <div class="bg">
@@ -14,9 +12,9 @@
     <h3>My CookBook! A Place to save my favourite recipes!</h3>
   </div>
   <form class="form-inline main-search active-cyan-4">
-    <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Find the recipe here!!"
+    <input class="form-control form-control-sm mr-3 w-75" id="recipeSearch" type="text" placeholder="Find the recipe here!!"
       aria-label="Search">
-    <button type="button" class="btn btn-dark" style="margin:5px;">Search</button>
+    <button type="button" id="submit" class="btn btn-dark" style="margin:5px;">Search</button>
   </form>
 </div>
 </div>
