--- a/views/join.handlebars
+++ b/views/join.handlebars
@@ -7,31 +7,25 @@
 
 
         <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/signin">SignIn</a></button>
-
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+        <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/myownrecipe">Create recipe</a></button>
     </form>
 </nav>
+<body>
 <div class="main-form-div">
     <div class="joing-form">
-        <form>
+        <form id="joinForm" method="POST">
             <div class="form-group">
-                <label for="name">Name</label>
-                <input type="email" class="form-control" id="name" placeholder="Enter your name">
+                <label for="name">Name</label>x 
+                <input type="text" class="form-control" id="joinUserName" placeholder="Enter your name">
 
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                    else.</small>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <input type="password" class="form-control" id="joinPassword" placeholder="Password">
             </div>
-            <button type="submit" class="btn btn-primary">Join</button>
+
+                 <button type="button" id="userSubmit" class="btn btn-dark" onclick="process()" style="margin:5px;">join</button>
         </form>
     </div>
 </div>
+</body>
