--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,14 +12,9 @@
     <h3>My CookBook! A Place to save my favourite recipes!</h3>
   </div>
   <form class="form-inline main-search active-cyan-4">
-    <input class="form-control form-control-sm mr-3 w-75" id="recipeSearch" type="text" placeholder="Find the recipe here!!"
-      aria-label="Search">
+    <input class="form-control form-control-sm mr-3 w-75" id="recipeSearch" type="text"
+      placeholder="Find the recipe here!!" aria-label="Search">
     <button type="button" id="submit" class="btn btn-dark" style="margin:5px;">Search</button>
   </form>
 </div>
 </div>
-
-
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
