--- a/views/myownrecipe.handlebars
+++ b/views/myownrecipe.handlebars
@@ -4,7 +4,8 @@
         <button type="button" class="btn btn-dark btn-secondary" style="margin:5px;"><a href="/">Home</a></button>
         <button type="button" class="btn btn-dark btn-join" style="margin:5px;"><a href="/join">Join</a></button>
         <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/signin">SignIn</a></button>
-        <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/signin">Create My Recipe</a></button>
+        <button type="button" class="btn btn-dark" style="margin:5px;"><a href="/myownrecipe">Create My
+                Recipe</a></button>
 </nav>
 <div class="row">
     <div class="col-sm-4">
@@ -28,22 +29,26 @@
                 <form>
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Recipe Name</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1">
+                        <input type="text" class="form-control recipe-name" id="exampleFormControlInput1">
                     </div>
             </div>
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Recipe Ingredients with amount</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea class="form-control recipe-ingredients" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Method</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea class="form-control recipe-method" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Dietary Requirements</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1">
+                <input type="text" class="form-control recipe-dr" id="exampleFormControlInput1">
             </div>
-            <button type="submit" class="btn btn-primary">Save your recipe</button>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Enter URL of image</label>
+                <input type="text" class="form-control recipe-image" id="exampleFormControlInput1">
+            </div>
+            <button type="submit" class="btn btn-primary btn-save-recipe">Save your recipe</button>
             </form>
         </div>
     </div>
